src/test/ui/rfcs/rfc-2632-const-trait-impl/const-impl-recovery.stderr
error: expected identifier, found keyword `impl`
  --> $DIR/const-impl-recovery.rs:6:7
   |
LL | const impl Foo for i32 {}
   |       ^^^^ expected identifier, found keyword
   |
help: you might have meant to write a const trait impl
   |
LL | impl const Foo for i32 {}
   |--    ^^^^^

error: expected identifier, found keyword `impl`
  --> $DIR/const-impl-recovery.rs:10:7
   |
LL | const impl<T: Foo> Bar for T {}
   |       ^^^^ expected identifier, found keyword
   |
help: you might have meant to write a const trait impl
   |
LL | impl<T: Foo> const Bar for T {}
   |--            ^^^^^

error: aborting due to 2 previous errors

